# gha-nomad-docker

./: .gitignore  gha-nomad-integration.drawio  gha-runner-empheral.sh
.github/workflows/: docker.yml  nomad-run.yml  nomad.yml
docker-gha-dispatcher/: Dockerfile  app.py  docker-bake.hcl  job.nomad.hcl  pyproject.toml
docker-gha-runner/: Dockerfile  docker-bake.hcl  entrypoint.sh
nomad-gha-runner/: Dockerfile  default.hcl  entrypoint.sh  gha-runner.nomad.hcl
terraform-nomad-gha-dispatcher/: .terraform.lock.hcl  main.tf  nomad-gha-dispatcher-prod.hcl.tftpl  nomad-gha-dispatcher-sandbox.hcl.tftpl  variables.tf
terraform-nomad-nomad-job/: main.tf  variables.tf  versions.tf
